# syscallnrs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: build.rs  lib.rs
utils/: extract.sh  find_geteuid.sh
